--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "demoproject",
   "version": "1.0.0",
   "main": "quickStart.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "morgan": "^1.10.0"
   }
 }
